setup code for gan inversion testing on cluster

--- a/inSilico_experiments/gan_inversion/gan_inversion_big_data_set.ipynb
+++ b/inSilico_experiments/gan_inversion/gan_inversion_big_data_set.ipynb
@@ -8,16 +8,16 @@
    "source": [
     "import os\n",
     "import sys\n",
-    "sys.path.append(r\"C:\\Users\\Alireza\\Documents\\Git\\Cosine-Project\")\n",
+    "sys.path.append(r\"/n/home09/dsprague/Ponce_rotation\")\n",
     "from core.utils.func_lib import *\n",
     "from core.utils.GAN_utils import upconvGAN\n",
     "from core.utils.GAN_invert_utils import GAN_invert\n",
     "from core.utils.GAN_utils import upconvGAN\n",
     "#%% \n",
     "# Set parameters\n",
-    "refimgdir = r\"C:\\Data\\cosine\\insilico_experiments\\data\\big_data_set\"\n",
+    "refimgdir = r\"/n/home09/dsprague/data/gan_invert_test\"\n",
     "\n",
-    "save_dir = r\"N:\\PonceLab\\Users\\Alireza\\insilico_experiments\\gan_inverted\\big_data_set_target_center_crop\"\n",
+    "save_dir = r\"/n/home09/dsprague/data/gan_invert_test_preprocess\"\n",
     "os.makedirs(save_dir, exist_ok=True)\n",
     "refimgnms, refimgtsr = load_ref_imgs(\n",
     "        imgdir=refimgdir, preprocess_type='center_crop', image_size=256)\n",
@@ -494,14 +494,14 @@
    ],
    "source": [
     "\n",
-    "save_dir = r\"N:\\PonceLab\\Users\\Alireza\\insilico_experiments\\gan_inverted\\big_data_set_real_size\"\n",
+    "save_dir = r\"/n/home09/dsprague/data/gan_invert_output\"\n",
     "os.makedirs(save_dir, exist_ok=True)\n",
     "G = upconvGAN(\"fc6\").cuda().eval()\n",
     "for imgid in range(len(refimgnms)):\n",
     "        targnm, target_imgtsr_real = refimgnms[imgid], refimgtsr[imgid:imgid + 1]\n",
     "\n",
     "        target_img = target_imgtsr_real[0]\n",
-    "        \n",
+    "\n",
     "        z_opts, img_opts= GAN_invert(G, target_img.cuda(), max_iter=int(5E4),\n",
     "                                print_progress=False, batch_size = 1)\n",
     "        #imgs = resize_and_pad_tsr(img_opts, (147, 147), (40, 40))\n",
@@ -511,6 +511,13 @@
     "        image_format = \"png\"\n",
     "        img = ToPILImage()(imgs[0])\n",
     "        img.save(join(save_dir, f\"{file_name}.{image_format}\"))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Old code ?? "
    ]
   },
   {
