--- a/process_videos.ipynb
+++ b/process_videos.ipynb
@@ -493,7 +493,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -501,7 +501,7 @@
     "fig = plt.figure()\n",
     "\n",
     "for key, value in videos_data.items():\n",
-    "    diff = [np.linalg.norm(value[i+1,:]-value[i,:]) for i in range(value.shape[0]-1)]\n",
+    "    diff = [np.linalg.norm(value[i+1,:]-value[i,:])/value.shape[1] for i in range(value.shape[0]-1)]\n",
     "\n",
     "    plt.plot(np.linspace(0,2,len(diff)),diff, label=key)\n",
     "\n",
@@ -532,14 +532,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
     "fig = plt.figure()\n",
     "\n",
     "for key, value in videos_data.items():\n",
-    "    diff = [np.linalg.norm(value[i,:]-value[0,:]) for i in range(value.shape[0])]\n",
+    "    diff = [np.linalg.norm(value[i,:]-value[30,:])/value.shape[1] for i in range(value.shape[0])]\n",
     "\n",
     "    plt.plot(np.linspace(0,2,len(diff)),diff, label=key)\n",
     "\n",
