CNN activation analysis

--- a/image_similarity_analysis.ipynb
+++ b/image_similarity_analysis.ipynb
@@ -1128,6 +1128,37 @@
     "    \n",
     "    frame_diff[folder] = {'original': mean_sim_frames, 'inverted': mean_sim_frames_inv, 'diff': np.abs(mean_sim_frames_inv - mean_sim_frames)}"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Get CNN activations"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data_dir = r\"/n/home09/dsprague/data\"\n",
+    "\n",
+    "def get_activations(path):\n",
+    "    \n",
+    "    images = [im_name for im_name in os.listdir(path) if im_name[-4:]=='.png']\n",
+    "                            \n",
+    "    batch  = torch.from_numpy(np.asarray([cv2.imread(os.path.join(path, image)).transpose(2,0,1) for image in images]))\n",
+    "    \n",
+    "    sim_scorer = TorchImageDistance()\n",
+    "    sim_scorer.first_image_batch = batch\n",
+    "\n",
+    "    net_layer_dict = sim_scorer.get_CCN_encoding()\n",
+    "    \n",
+    "    return net_layer_dict, images\n",
+    "\n",
+    "net_layer_motion, motion_images = get_activations(os.path.join(data_dir, 'move_stim', 'all_images'))"
+   ]
   }
  ],
  "metadata": {
