image encoding code

--- a/image_similarity_analysis.ipynb
+++ b/image_similarity_analysis.ipynb
@@ -142,15 +142,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "Batch size checked\n",
       "The CNN scorers are set\n",
-      "The CNN scorers are set\n"
+      "Scorers set\n",
+      "images encoded\n",
+      "Batch size checked\n",
+      "The CNN scorers are set\n",
+      "Scorers set\n",
+      "images encoded\n"
      ]
     }
    ],
@@ -1138,27 +1144,189 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data_dir = r\"/n/home09/dsprague/data\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 60,
    "metadata": {},
    "outputs": [],
    "source": [
     "data_dir = r\"/n/home09/dsprague/data\"\n",
     "\n",
-    "def get_activations(path):\n",
+    "def get_activations(path, format):\n",
     "    \n",
-    "    images = [im_name for im_name in os.listdir(path) if im_name[-4:]=='.png']\n",
-    "                            \n",
-    "    batch  = torch.from_numpy(np.asarray([cv2.imread(os.path.join(path, image)).transpose(2,0,1) for image in images]))\n",
+    "    ref_img_nms, ref_img_tsr = load_ref_imgs(\n",
+    "    imgdir=path, preprocess_type='center_crop', image_size=256, Nlimit=1000)\n",
     "    \n",
+    "    #images = [im_name for im_name in os.listdir(path) if im_name[-len(format):]==format]                       \n",
+    "    #batch  = torch.from_numpy(np.asarray([cv2.imread(os.path.join(path, image)).transpose(2,0,1) for image in images]))\n",
+    "\n",
     "    sim_scorer = TorchImageDistance()\n",
-    "    sim_scorer.first_image_batch = batch\n",
+    "    sim_scorer.first_image_batch = ref_img_tsr\n",
     "\n",
     "    net_layer_dict = sim_scorer.get_CCN_encoding()\n",
     "    \n",
-    "    return net_layer_dict, images\n",
-    "\n",
-    "net_layer_motion, motion_images = get_activations(os.path.join(data_dir, 'move_stim', 'all_images'))"
+    "    return net_layer_dict, ref_img_nms\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 61,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The CNN scorers are set\n",
+      "encoding for <core.utils.CNN_scorers.TorchScorer object at 0x14f4cb232ec0> finished\n",
+      "encoding for <core.utils.CNN_scorers.TorchScorer object at 0x14f4caf63e80> finished\n",
+      "encoding for <core.utils.CNN_scorers.TorchScorer object at 0x14f4caf6bf10> finished\n",
+      "encoding for <core.utils.CNN_scorers.TorchScorer object at 0x14f4cb231630> finished\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "dict_keys(['resnet50', 'resnet50_linf_8', 'cornet_s', 'alexnet'])"
+      ]
+     },
+     "execution_count": 61,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "net_layer_motion, motion_images = get_activations(os.path.join(data_dir, 'move_stimuli', 'all_images'), '.png')\n",
+    "net_layer_motion.keys()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pickle\n",
+    "\n",
+    "with open(os.path.join(data_dir, 'net_layer_activations','move_stimuli', 'all_images.pickle'), 'wb') as handle:\n",
+    "    pickle.dump(net_layer_motion, handle, protocol=pickle.HIGHEST_PROTOCOL)\n",
+    "\n",
+    "np.save(os.path.join(data_dir, 'net_layer_activations', 'move_stimuli', 'image_names.npy'), np.asarray(motion_images))      "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ref_img_nms, ref_img_tsr = load_ref_imgs(\n",
+    "    imgdir=os.path.join(data_dir, 'imagenet_test', 'Group1'), preprocess_type='center_crop', image_size=256, Nlimit=200)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 56,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "251\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(len(os.listdir(os.path.join(data_dir, 'imagenet_test', 'Group1'))))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 62,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The CNN scorers are set\n",
+      "encoding for <core.utils.CNN_scorers.TorchScorer object at 0x14f4cb231240> finished\n",
+      "encoding for <core.utils.CNN_scorers.TorchScorer object at 0x14f4cae03ee0> finished\n",
+      "encoding for <core.utils.CNN_scorers.TorchScorer object at 0x14f4cae00970> finished\n",
+      "encoding for <core.utils.CNN_scorers.TorchScorer object at 0x14f4caf6ba30> finished\n",
+      "The CNN scorers are set\n",
+      "encoding for <core.utils.CNN_scorers.TorchScorer object at 0x14f4cae014b0> finished\n",
+      "encoding for <core.utils.CNN_scorers.TorchScorer object at 0x14f4caf6b640> finished\n",
+      "encoding for <core.utils.CNN_scorers.TorchScorer object at 0x14f4cad1bbb0> finished\n",
+      "encoding for <core.utils.CNN_scorers.TorchScorer object at 0x14f4cad1b220> finished\n",
+      "The CNN scorers are set\n",
+      "encoding for <core.utils.CNN_scorers.TorchScorer object at 0x14f4cad1b010> finished\n",
+      "encoding for <core.utils.CNN_scorers.TorchScorer object at 0x14f4cac2fee0> finished\n",
+      "encoding for <core.utils.CNN_scorers.TorchScorer object at 0x14f4cac2da80> finished\n",
+      "encoding for <core.utils.CNN_scorers.TorchScorer object at 0x14f4cad29150> finished\n",
+      "The CNN scorers are set\n",
+      "encoding for <core.utils.CNN_scorers.TorchScorer object at 0x14f4cac2e0b0> finished\n",
+      "encoding for <core.utils.CNN_scorers.TorchScorer object at 0x14f4cad28700> finished\n",
+      "encoding for <core.utils.CNN_scorers.TorchScorer object at 0x14f4cab8ff10> finished\n",
+      "encoding for <core.utils.CNN_scorers.TorchScorer object at 0x14f4cab8d510> finished\n"
+     ]
+    }
+   ],
+   "source": [
+    "net_layer_imnet_group1, group1_images = get_activations(os.path.join(data_dir, 'imagenet_test', 'Group1'), '.JPEG')\n",
+    "net_layer_imnet_group2, group2_images = get_activations(os.path.join(data_dir, 'imagenet_test', 'Group2'), '.JPEG')\n",
+    "net_layer_imnet_group3, group3_images = get_activations(os.path.join(data_dir, 'imagenet_test', 'Group3'), '.JPEG')\n",
+    "net_layer_imnet_group4, group4_images = get_activations(os.path.join(data_dir, 'imagenet_test', 'Group4'), '.JPEG')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 64,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with open(os.path.join(data_dir, 'net_layer_activations','imagenet_random', 'Group1.pickle'), 'wb') as handle:\n",
+    "    pickle.dump(net_layer_imnet_group1, handle, protocol=pickle.HIGHEST_PROTOCOL)\n",
+    "\n",
+    "np.save(os.path.join(data_dir, 'net_layer_activations', 'imagenet_random', 'Group1.npy'), np.asarray(group1_images))\n",
+    "\n",
+    "with open(os.path.join(data_dir, 'net_layer_activations','imagenet_random', 'Group2.pickle'), 'wb') as handle:\n",
+    "    pickle.dump(net_layer_imnet_group2, handle, protocol=pickle.HIGHEST_PROTOCOL)\n",
+    "\n",
+    "np.save(os.path.join(data_dir, 'net_layer_activations', 'imagenet_random', 'Group2.npy'), np.asarray(group2_images))\n",
+    "\n",
+    "with open(os.path.join(data_dir, 'net_layer_activations','imagenet_random', 'Group3.pickle'), 'wb') as handle:\n",
+    "    pickle.dump(net_layer_imnet_group3, handle, protocol=pickle.HIGHEST_PROTOCOL)\n",
+    "\n",
+    "np.save(os.path.join(data_dir, 'net_layer_activations', 'imagenet_random', 'Group3.npy'), np.asarray(group3_images))\n",
+    "\n",
+    "with open(os.path.join(data_dir, 'net_layer_activations','imagenet_random', 'Group4.pickle'), 'wb') as handle:\n",
+    "    pickle.dump(net_layer_imnet_group4, handle, protocol=pickle.HIGHEST_PROTOCOL)\n",
+    "\n",
+    "np.save(os.path.join(data_dir, 'net_layer_activations', 'imagenet_random', 'Group4.npy'), np.asarray(group4_images))      "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
