--- a/process_videos.ipynb
+++ b/process_videos.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1886,9 +1886,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "ponce",
+   "display_name": "Python [conda env:.conda-ponce_rotation]",
    "language": "python",
-   "name": "python3"
+   "name": "conda-env-.conda-ponce_rotation-py"
   },
   "language_info": {
    "codemirror_mode": {
@@ -1900,9 +1900,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.2"
+   "version": "3.10.11"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
