--- a/image_similarity_analysis.ipynb
+++ b/image_similarity_analysis.ipynb
@@ -1153,6 +1153,26 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "seed = 15\n",
+    "\n",
+    "full_data_root = r\"/n/holylfs06/LABS/kempner_shared/Lab/data/imagenet_1k/ILSVRC2012_img_test_v10102019/test\"\n",
+    "\n",
+    "data_path = os.path.join(data_root, folder_name)\n",
+    "if not os.path.isdir(data_path):\n",
+    "    os.makedirs(data_path) \n",
+    "\n",
+    "samples = [f\"ILSVRC2012_test_{i:08}.JPEG\" for i in np.random.choice(np.arange(25000*task_id+1,25000*task_id+25000+1), size=250, replace=False)]\n",
+    "\n",
+    "for sample in samples:\n",
+    "        shutil.copyfile(os.path.join(full_data_root, sample), os.path.join(data_path, sample))"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 60,
    "metadata": {},
    "outputs": [],
